Bug 111432 [FIRST] Mouse wheel scrolling doesn't work in print preview on page margin or on frame page r+sr=roc